--- a/JavaQuiz/app/src/main/res/menu/menu_navigation.xml
+++ b/JavaQuiz/app/src/main/res/menu/menu_navigation.xml
@@ -4,18 +4,18 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
 
 <item
     android:title="@string/item_1"
-    android:id="@+id/notificationItem"
+    android:id="@+id/tab_themes"
     android:orderInCategory="1"
     android:icon="@drawable/ic_message_black_24dp"/>
 
 <item
     android:title="@string/item_1"
-    android:id="@+id/notesItem"
+    android:id="@+id/tab_quicktest"
     android:orderInCategory="1"
     android:icon="@drawable/ic_message_black_24dp"/>
 <item
     android:title="@string/item_1"
-    android:id="@+id/birthdayItem"
+    android:id="@+id/tab_favorits"
     android:orderInCategory="1"
     android:icon="@drawable/ic_message_black_24dp"/>
 
