--- a/JavaQuiz/app/src/main/res/layout/activity_test.xml
+++ b/JavaQuiz/app/src/main/res/layout/activity_test.xml
@@ -43,7 +43,7 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab-test"
+            android:id="@+id/fab_test"
             android:src="@drawable/ic_navigate_next_black_24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
